# Lingo

./: .gitignore  CHANGELOG.md  README.en.md  README.md  README.ru.md  index.html  overlay.html  package-lock.json  package.json  region-picker.html  tailwind.config.js  vite.config.js
.github/updater/: updater-legacy.key.pub  updater.key  updater.key.pub
.github/workflows/: ci.yml  deploy-tencent-light-server.yml  deploy-tencent-website.yml  deploy-translate-proxy.yml  release.yml
.phrase/docs/: CHANGE.md  ISSUES.md  PHASES.md
.phrase/phases/phase-client-stability-20260326/: change_client-stability_20260326.md  issue_client-stability_20260326.md  plan_client-stability_20260326.md  spec_client-stability_20260326.md  task_client-stability_20260326.md
docs/: tencent-cloud-translate-proxy.md  translation-service-config.md  vision-model-evaluation.md  windows-code-signing.md
public/public/: site-config
scripts/: dev-desktop.mjs  generate-brand-assets.mjs  get-release-notes.mjs  prepare-cos-release.mjs  sync-github-release-notes.mjs  upload-cos-release.mjs  verify-ocr-fixtures.mjs  verify-release-config.mjs  verify-updater-signing-key.mjs  verify-updater-signing-key.test.mjs
server/translate-proxy/: .env.example  Caddyfile  Dockerfile  docker-compose.yml  package-lock.json  package.json  runtime-config.example.json
server/translate-proxy/public/: analytics-dashboard.html
server/translate-proxy/samples/dota2-chat/: thread-2026-04-02-golden.json
server/translate-proxy/scripts/: analytics-smoke-test.mjs  compare-vision-models.mjs  diagnose-latency.mjs  local-ocr-smoke.py  print-siliconflow-config.mjs  smoke-test.mjs  smoke-vision-chat.mjs
server/translate-proxy/src/: analytics-store.mjs  runtime-config.mjs  server.mjs
spikes/ocr-vision/: .gitignore  SPIKE_B_WINDOWS.md  SPIKE_RESULTS.md  gen-synthetic.swift  spike.swift
spikes/ocr-vision/samples/dota2/: README.md  groundtruth.tsv
spikes/ocr-vision/spike-windows/: .gitignore  Cargo.toml  run-sweep.ps1
spikes/ocr-vision/spike-windows/src/: main.rs
spikes/overlay-design/: index.html
src/: App.css  App.jsx  image2-ui.css  index.css  main.jsx  types.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  incoming-windows.json
src-tauri/examples/: ocr_fixture.rs
src-tauri/icons/: icon.icns
src-tauri/scripts/: sign-windows.ps1
src-tauri/src/: ai_translator.rs  auth.rs  incoming_chat.rs  lib.rs  main.rs  shell_helper.rs  shortcut.rs  store.rs  tray.rs
src-tauri/src/incoming/: capture.rs  game_profiles.rs  mod.rs  ocr.rs  permission.rs  pipeline.rs  region.rs  tracker.rs
src-tauri/src/incoming/capture/: macos.rs  mod.rs  windows.rs
src-tauri/src/incoming/game_window/: macos.rs  mod.rs  windows.rs
src-tauri/src/incoming/ocr/: macos.rs  mod.rs  windows.rs
src-tauri/windows/: nsis-hooks.nsh
src/components/: AnalyticsProvider.jsx  AuthProvider.jsx  DeveloperNote.jsx  DropdownMenu.jsx  IncomingAdvancedSettingsModal.jsx  IncomingCalibrationModal.jsx  KeycapGroup.jsx  Layout.jsx  LoginModal.jsx  PageContextPanel.jsx  PageHeader.jsx  PanelCard.jsx  ServerRail.jsx  Sidebar.jsx  StatusChip.jsx  StoreProvider.jsx  UpdateProvider.jsx
src/components/lg/: Chip.jsx  Kbd.jsx  PageHead.jsx  Toggle.jsx  index.js
src/constants/: gameScenes.js  hotkeys.js  languages.js  navigation.js  version.js
src/i18n/: I18nProvider.jsx  messages.js  messages.test.mjs
src/icons/: index.jsx
src/lib/: supabase.js
src/overlay/: Overlay.jsx  main.jsx  overlay.css  positioning.js  positioning.test.mjs
src/pages/: About.jsx  IncomingOverlay.jsx  IncomingSelection.jsx  Mana.jsx  Phrases.jsx  Settings.jsx  Translate.jsx  Tutorial.jsx  User.jsx
src/pages/home/: index.jsx
src/pages/home/components/: EnableStatusCard.jsx  GameSceneCard.jsx  HotkeyCard.jsx  IncomingStatusCard.jsx  TranslationDirectionCard.jsx
src/region-picker/: RegionPicker.jsx  main.jsx  picker.css
src/services/: analyticsService.js  analyticsUtils.js  analyticsUtils.test.mjs  authClient.js  incomingService.js  modelProviders.js  publicSiteConfig.js  settingsStore.js  tauriRuntime.js  updaterErrors.js  updaterErrors.test.mjs
src/utils/: error.js  log.js  platform.js  toast.js
supabase/: config.toml  translation-runtime.example.json
supabase/functions/me/: index.ts
supabase/functions/translate/: index.ts
supabase/migrations/: 20260305_profiles.sql  20260317160000_translation_runtime_config.sql
