[package]
name = "Lingo"
version = "0.9.6"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lingo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [ "macos-private-api", "tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-shell = "2.3"
tauri-plugin-process = "2"
anyhow = "1.0"
tauri-plugin-store = "2"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1", features = ["time"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# Apple Vision OCR for the v0.7.0 incoming-chat translation feature.
# Reference impl lives at spikes/ocr-vision/spike.swift.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
  "NSArray",
  "NSDictionary",
  "NSError",
  "NSString",
  "NSValue",
] }
objc2-vision = { version = "0.3", features = [
  "VNRequest",
  "VNRequestHandler",
  "VNObservation",
  "VNRecognizeTextRequest",
] }
objc2-core-graphics = { version = "0.3", features = [
  "CGImage",
  "CGDataProvider",
  "CGColorSpace",
  "CGContext",
  "CGBitmapContext",
  "CGDirectDisplay",
  "CGError",
] }
# We intentionally do NOT enable the "CGWindow" feature here. That would
# pull in `CGPreflightScreenCaptureAccess` / `CGRequestScreenCaptureAccess`
# as hard-linked symbols which don't exist before macOS 10.15. Permission
# checks instead go through `incoming::permission`, which uses `dlsym` so
# the binary still loads on older macOS and just reports `Unknown`.
objc2-core-foundation = { version = "0.3", features = ["CFData", "CFCGTypes"] }

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
] }
# High-level WinRT-projecting crate for the v0.7.0 incoming-translation
# feature. Used by `incoming::ocr::windows` (Windows.Media.Ocr) and
# `incoming::capture::windows` (Windows.Graphics.Capture). Coexists with
# `windows-sys` above; they target different layers (WinRT vs raw Win32)
# and don't conflict. Pinned to match the spike crate so the COM ABI is
# guaranteed identical.
# Reference: spikes/ocr-vision/SPIKE_B_WINDOWS.md.
windows = { version = "=0.61.3", features = [
  "Foundation",
  "Foundation_Collections",
  "Globalization",
  "Graphics_Capture",
  "Graphics_DirectX",
  "Graphics_DirectX_Direct3D11",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  # v0.9.0 incoming-v2 game window detection
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_WinRT",
  "Win32_System_WinRT_Direct3D11",
  "Win32_System_WinRT_Graphics_Capture",
] }
